@@ -162,6 +162,9 @@ public final class TracingTest
                     traces.add(string);
                 }
 
+                protected void waitForPendingEvents()
+                {
+                }
             };
         }
 
